--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <br />
             <a href="#development">Phát Triển</a>
             <br />
-            <a href="https://www.kfcvietnam.com.vn/kfc-tabs/kfc-news">
-                Đi Tới Trang Tin tức
-            </a>
+            <a href="./news/news.html">Đi Tới Trang Tin tức</a>
             <br />
             <a href="https://www.kfcvietnam.com.vn/menu/hot-deal">
                 Đi Tới Trang Khuyến mãi
